--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "electron-reload": "^2.0.0-alpha.1",
     "electron-store": "^8.0.1",
     "events": "^3.3.0",
+    "express": "^4.17.3",
     "i18next": "^21.6.5",
     "i18next-browser-languagedetector": "^6.1.2",
     "md5": "^2.3.0",
@@ -31,6 +32,7 @@
     "redux-thunk": "^2.4.0",
     "throttle-debounce": "^3.0.1",
     "typescript": "^4.1.2",
+    "video.js": "^7.17.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -79,6 +81,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-scroll": "^1.8.3",
     "@types/throttle-debounce": "^2.1.0",
+    "@types/video.js": "^7.3.31",
     "babel-plugin-import": "^1.13.3",
     "craco-less": "^1.20.0",
     "cross-env": "^7.0.3",
