feat: add multi-user login feature

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@vitejs/plugin-legacy": "^4.1.0",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.13",
-    "electron": "^23.1.1",
+    "electron": "^25.5.0",
     "electron-builder": "^23.6.0",
     "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.6.0",
@@ -80,6 +80,7 @@
     "dayjs": "^1.11.7",
     "electron-log": "^4.4.8",
     "electron-store": "^8.1.0",
+    "esbuild": "^0.19.0",
     "i18next": "^22.5.0",
     "i18next-browser-languagedetector": "^7.0.2",
     "localforage": "^1.10.0",
