--- a/package.json
+++ b/package.json
@@ -71,6 +71,8 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.1.4",
+    "@livekit/components-react": "^2.0.0",
+    "@livekit/components-styles": "^1.0.9",
     "@tailwindcss/line-clamp": "^0.4.4",
     "ahooks": "^3.7.7",
     "antd": "^5.6.0",
@@ -86,7 +88,7 @@
     "localforage": "^1.10.0",
     "md5": "^2.3.0",
     "mitt": "^3.0.0",
-    "open-im-sdk-wasm": "^3.5.1-alpha.3",
+    "open-im-sdk-wasm": "^3.5.1-beta.1",
     "react-draggable": "^4.4.5",
     "react-i18next": "^12.3.1",
     "react-query": "^3.39.3",
