--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "@ckeditor/vite-plugin-ckeditor5": "^0.1.3",
     "@livekit/components-react": "^2.3.1",
     "@livekit/components-styles": "^1.0.12",
+    "@openim/wasm-client-sdk": "^3.8.1",
     "@tailwindcss/line-clamp": "^0.4.4",
     "ahooks": "^3.7.7",
     "antd": "^5.6.0",
@@ -98,7 +99,6 @@
     "localforage": "^1.10.0",
     "md5": "^2.3.0",
     "mitt": "^3.0.0",
-    "open-im-sdk-wasm": "^3.5.2",
     "react-draggable": "^4.4.5",
     "react-i18next": "^12.3.1",
     "react-image-file-resizer": "^0.4.8",
