--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "@ckeditor/ckeditor5-react": "^8.0.0",
     "@livekit/components-react": "^2.3.1",
     "@livekit/components-styles": "^1.0.12",
-    "@openim/wasm-client-sdk": "^3.8.2",
+    "@openim/wasm-client-sdk": "^3.8.2-2",
     "ahooks": "^3.7.7",
     "antd": "5.10.0",
     "axios": "^1.4.0",
